--- a/DFM/references.bib
+++ b/DFM/references.bib
@@ -1,8 +1,24 @@
-@book{adams1995hitchhiker,
-  title={The Hitchhiker's Guide to the Galaxy},
-  author={Adams, D.},
+@article{peterson,
+  title={Experimental Dynamics of Wing Assisted Running for a Bipedal
+Ornithopter},
+  author={Kevin, Peterson and Ronald,	 Fearing},
   isbn={9781417642595},
   url={http://books.google.com/books?id=W-xMPgAACAAJ},
-  year={1995},
+  year={2011},
+  journal={ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={ 5080–5086},
   publisher={San Val}
+}
+@article{Grodzki,
+author = {Grodzki, W. and Łukaszewicz, A.},
+title = {Design and manufacture of umanned aerial vehicles (UAV) wing structure using composite materials},
+journal = {Materialwissenschaft und Werkstofftechnik},
+volume = {46},
+number = {3},
+pages = {269-278},
+keywords = {UAV, Kompositstruktur, Sandwichstruktur, CAx, Numerische Mathematik, UAV, composite structure, sandwich structure, CAx, Numerical analysis},
+doi = {10.1002/mawe.201500351},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/mawe.201500351},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/mawe.201500351},
+year = {2015}
 }
